<resources>
    <string name="app_name">Hulme &amp; Burkhardt</string>
    <string name="title_activity_main">Hulme &amp; Burkhardt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_events">Events</string>
    <string name="menu_history">History</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_contact">Contact Us</string>


    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consequat nulla ac mi placerat consequat. Donec cursus leo at tempus suscipit. Donec mollis nec nisi id bibendum. Proin finibus risus vitae ex ullamcorper fermentum quis tincidunt nibh. Suspendisse elementum mauris lacus, at pharetra risus vestibulum quis. Duis quis nunc scelerisque tellus efficitur consequat. Praesent vel nisl non nisi blandit efficitur eu id tellus. Nam egestas sapien et elit tempus, ut rhoncus ante euismod. Nam lobortis tristique finibus. Curabitur orci diam, scelerisque vitae accumsan vitae, vehicula a turpis. Suspendisse tempus iaculis purus, ut tincidunt ante eleifend non.

Duis viverra porttitor odio a gravida. Pellentesque egestas massa sollicitudin ante rhoncus imperdiet. Nunc nunc nisi, dapibus vitae interdum nec, convallis a purus. Donec sed facilisis ipsum. Proin volutpat metus sit amet lectus vehicula, id blandit urna suscipit. Donec posuere turpis tortor, ut ultrices enim tempor non. Phasellus quis nisi enim. Nunc vitae leo vitae mauris placerat tristique. Sed et nibh vel justo iaculis placerat. Vestibulum pharetra tristique quam in interdum. Nulla ac feugiat felis, nec finibus lorem. Praesent sollicitudin ut mi nec interdum. Sed vitae commodo arcu. Donec eget molestie quam. Morbi ornare imperdiet turpis. Ut et nisl nec est pulvinar vulputate.

Aenean a venenatis dui. In hac habitasse platea dictumst. Nullam ac suscipit dolor, at bibendum odio. Aenean non mauris in nulla facilisis mollis quis sodales enim. Etiam ultricies gravida ipsum, faucibus lacinia massa condimentum ut. Proin ullamcorper sem nec aliquam ultrices. Vestibulum at metus ipsum.

Etiam dapibus ante id mi molestie convallis. Nunc urna tortor, finibus a sapien vel, luctus rhoncus lectus. Fusce metus sem, euismod eget porta ac, egestas in risus. Quisque accumsan commodo sollicitudin. Vestibulum vitae tortor ut urna aliquam rhoncus. Mauris urna risus, volutpat in lectus at, fermentum dictum mi. Nunc vitae commodo odio. Ut diam velit, mattis ut est nec, tincidunt vulputate mi. Ut accumsan nulla eget rhoncus vehicula. Suspendisse laoreet venenatis est vitae rutrum. Nulla cursus elit orci, non sollicitudin odio varius nec. Nulla pharetra vulputate nibh, in varius ligula feugiat non. Donec consectetur tempus felis a dictum. Vivamus consequat sed ante eget convallis. Curabitur massa neque, aliquam non pretium et, suscipit eget ante. Pellentesque bibendum quam a lacus posuere, in aliquam purus maximus.

Mauris interdum dui felis, vel malesuada nulla lobortis luctus. Donec et ipsum eleifend, eleifend orci vel, fringilla turpis. Sed aliquam dignissim tortor sit amet fringilla. Vestibulum id eleifend tellus. Quisque aliquet magna auctor mi volutpat, in dignissim ante gravida. Donec varius massa mattis sem bibendum, ut condimentum dolor vestibulum. Donec nec luctus dui.</string>
</resources>
