<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_ic"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_ic"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/events_ic"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/sports_ic"
            android:title="@string/menu_sports" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_contact" />

</menu>
